fix svg alignment

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -21,3 +21,7 @@ nav {
     margin: 0;
 }
 
+svg {
+    transform: translateX(10px);
+}
+
